[package]
authors = ["Chaoqian Xu <chaoranxu@gmail.com>"]
edition = "2021"
name = "maxwell-backend"
version = "0.5.1"

[dependencies]
config = "0.13.3"
log = "0.4.20"
log4rs = "1.2.0"

actix = "0.13.1"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
futures-intrusive = "0.5.0"
tokio = {version = "1.32.0", features = ["full"]}

ahash = "0.8.3"
anyhow = "1.0.75"
byteorder = "1.4.3"
bytes = "1.5.0"
chrono = "0.4.31"
dashmap = "5.5.3"
indexmap = "2.0.0"
once_cell = "1.18.0"
quanta = "0.12.2"
quick_cache = "0.4.1"
serde = "1.0.188"
serde_derive = "1.0.188"
seriesdb = {git = "https://github.com/xuchaoqian/seriesdb-rust.git", tag = "v0.10.1"}
thiserror = "1.0.50"
tikv-jemallocator = {version = "0.5.4", features = ["profiling"]}

maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.20.0"}
maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.10.10"}

[profile.release]
debug = true
