[package]
authors = ["Chaoqian Xu <chaoranxu@gmail.com>"]
edition = "2021"
name = "maxwell-backend"
version = "0.6.0"

[dependencies]
config = "0.14.0"
log = "0.4.21"
log4rs = "1.3.0"

actix = "0.13.3"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
futures-intrusive = "0.5.0"
tokio = {version = "1.36.0", features = ["full"]}

ahash = "0.8.11"
anyhow = "1.0.81"
byteorder = "1.5.0"
bytes = "1.6.0"
chrono = "0.4.35"
dashmap = "5.5.3"
indexmap = "2.2.6"
once_cell = "1.19.0"
quanta = "0.12.2"
quick_cache = "0.4.1"
serde = "1.0.197"
serde_derive = "1.0.197"
seriesdb = {git = "https://github.com/xuchaoqian/seriesdb-rust.git", tag = "v0.10.1"}
thiserror = "1.0.58"
tikv-jemallocator = {version = "0.5.4", features = ["profiling"]}

maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.22.1"}
maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.10.26"}

[profile.release]
debug = true
