[package]
authors = ["Chaoqian Xu <chaoranxu@gmail.com>"]
edition = "2021"
name = "maxwell-backend"
version = "0.9.0"

[dependencies]
config = "0.14.0"
log = "0.4.22"
log4rs = "1.3.0"

actix = "0.13.5"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
futures-intrusive = "0.5.0"
tokio = {version = "1.40.0", features = ["full"]}

ahash = "0.8.11"
anyhow = "1.0.87"
byteorder = "1.5.0"
bytes = "1.7.1"
chrono = "0.4.38"
dashmap = "6.1.0"
indexmap = "2.5.0"
once_cell = "1.19.0"
quanta = "0.12.3"
quick_cache = "0.6.6"
serde = "1.0.210"
serde_derive = "1.0.210"
seriesdb = {git = "https://github.com/xuchaoqian/seriesdb-rust.git", tag = "v0.10.1"}
thiserror = "1.0.63"
tikv-jemallocator = {version = "0.6.0", features = ["profiling"]}

maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.24.1"}
maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.11.0"}
